# AIMEX

./: .gitignore  AIMEX.vcxproj  CMakeLists.txt  README.md
.git copy/: config  index
.git copy/logs/: HEAD
.git copy/logs/refs/heads/: main
.git copy/refs/heads/: main
src/: color_filter.cpp  color_filter.h  config.h  main.cpp  makcu.cpp  makcu.h  ndi_receiver.cpp  ndi_receiver.h  serialport.cpp  serialport.h  usb_sender.cpp  usb_sender.h  vector_calculator.cpp  vector_calculator.h  web_server.cpp  web_server.h
web/: index.html  script.js  style.css
